--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_auth: "^0.20.0+1"
   firebase_analytics: "^7.0.1"
   cloud_firestore: "^0.16.0"
+  google_maps_flutter: ^2.0.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
