--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,6 +39,13 @@
             android:value="2" />
 
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyDgJX3fH60Yq-4mD2jLrKkpn37lk76s44c"/>
+            android:value="AIzaSyDgJX3fH60Yq-4mD2jLrKkpn37lk76s44c"/>
+
     </application>
+    <uses-permission
+            android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission
+            android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission
+            android:name="android.permission.INTERNET" />
 </manifest>
