--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   firebase_analytics: "^7.0.1"
   cloud_firestore: "^0.16.0"
   google_maps_flutter: ^2.0.6
+  location: ^3.0.2
+  dio: ^3.0.0
+  geolocator: ^6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
